// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Resolver: bounds fails retrieving all the data due to missing permissions 1`] = `
Object {
  "data": null,
  "errors": Array [
    Object {
      "extensions": Object {
        "code": "UNAUTHENTICATED",
      },
      "message": "You need following role: ReadPropertyData:Detailed",
    },
    Object {
      "extensions": Object {
        "code": "UNAUTHENTICATED",
      },
      "message": "You need following role: ReadPropertyData:Detailed",
    },
    Object {
      "extensions": Object {
        "code": "UNAUTHENTICATED",
      },
      "message": "You need following role: ReadPropertyData:Detailed",
    },
    Object {
      "extensions": Object {
        "code": "UNAUTHENTICATED",
      },
      "message": "You need following role: ReadPropertyData:Detailed",
    },
    Object {
      "extensions": Object {
        "code": "UNAUTHENTICATED",
      },
      "message": "You need following role: ReadPropertyData:Detailed",
    },
    Object {
      "extensions": Object {
        "code": "UNAUTHENTICATED",
      },
      "message": "You need following role: ReadPropertyData:Detailed",
    },
    Object {
      "extensions": Object {
        "code": "UNAUTHENTICATED",
      },
      "message": "You need following role: ReadPropertyData:Detailed",
    },
    Object {
      "extensions": Object {
        "code": "UNAUTHENTICATED",
      },
      "message": "You need following role: ReadPropertyData:Detailed",
    },
    Object {
      "extensions": Object {
        "code": "UNAUTHENTICATED",
      },
      "message": "You need following role: ReadPropertyData:Detailed",
    },
    Object {
      "extensions": Object {
        "code": "UNAUTHENTICATED",
      },
      "message": "You need following role: ReadPropertyData:Detailed",
    },
    Object {
      "extensions": Object {
        "code": "UNAUTHENTICATED",
      },
      "message": "You need following role: ReadPropertyData:Detailed",
    },
    Object {
      "extensions": Object {
        "code": "UNAUTHENTICATED",
      },
      "message": "You need following role: ReadPropertyData:Detailed",
    },
    Object {
      "extensions": Object {
        "code": "UNAUTHENTICATED",
      },
      "message": "You need following role: ReadPropertyData:Detailed",
    },
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Resolver: bounds successfully retrieves all the possible data 1`] = `
Object {
  "data": Object {
    "bounds": Object {
      "bounds": "56.992294 24.136619, 56.976394 23.99579, 56.992294 24.136619, 56.992294 24.136619",
      "buildings": Array [
        Object {
          "bounds": "56.992294 24.136619, 56.976394 23.99579, 56.992294 24.136619",
          "id": 1,
          "properties": Object {
            "results": Array [
              Object {
                "area": 90,
                "calc_price_per_sqm": 1.11,
                "category": "apartment",
                "content": "",
                "floor": 2,
                "foreign_id": null,
                "id": 1,
                "images": Array [],
                "lat": 56.1,
                "lng": 24.9,
                "price": 100,
                "published_at": "2021-04-12T19:47:30.000Z",
                "rent_type": "monthly",
                "rooms": null,
                "type": "rent",
                "url": "https://www.ss.com/msg/lv/real-estate/flats/aizkraukle-and-reg/aiviekstes-pag/aghfx.html",
              },
              Object {
                "area": null,
                "calc_price_per_sqm": null,
                "category": "apartment",
                "content": "",
                "floor": null,
                "foreign_id": null,
                "id": 2,
                "images": Array [],
                "lat": 56.1,
                "lng": 24.9,
                "price": 200,
                "published_at": "2021-04-12T19:47:30.000Z",
                "rent_type": "monthly",
                "rooms": null,
                "type": "rent",
                "url": "https://www.ss.lv/msg/lv/real-estate/flats/riga/bolderaya/cceeb.html",
              },
            ],
            "summary": Object {
              "count": 2,
              "price": Object {
                "count": 2,
                "max": 200,
                "mean": 150,
                "median": 150,
                "min": 100,
                "mode": 100,
                "standardDev": 50,
              },
            },
          },
        },
        Object {
          "bounds": "56.992294 24.136619, 56.976394 23.99579, 56.992294 24.136619",
          "id": 2,
          "properties": Object {
            "results": Array [
              Object {
                "area": null,
                "calc_price_per_sqm": null,
                "category": "house",
                "content": "",
                "floor": null,
                "foreign_id": null,
                "id": 3,
                "images": Array [],
                "lat": null,
                "lng": null,
                "price": 300,
                "published_at": "2021-04-12T19:47:30.000Z",
                "rent_type": "monthly",
                "rooms": null,
                "type": "rent",
                "url": "https://www.ss.com/msg/lv/real-estate/homes-summer-residences/tukums-and-reg/engures-pag/hhjbf.html",
              },
            ],
            "summary": Object {
              "count": 1,
              "price": Object {
                "count": 1,
                "max": 300,
                "mean": 300,
                "median": 300,
                "min": 300,
                "mode": 300,
                "standardDev": null,
              },
            },
          },
        },
        Object {
          "bounds": "56.992294 24.136619, 56.976394 23.99579, 56.992294 24.136619",
          "id": 3,
          "properties": Object {
            "results": Array [],
            "summary": Object {
              "count": 0,
              "price": Object {
                "count": 0,
                "max": null,
                "mean": null,
                "median": null,
                "min": null,
                "mode": null,
                "standardDev": null,
              },
            },
          },
        },
      ],
      "land": Array [
        Object {
          "bounds": "56.992294 24.136619, 56.976394 23.99579, 56.992294 24.136619",
          "id": 1,
          "properties": Object {
            "results": Array [
              Object {
                "area": 90,
                "calc_price_per_sqm": 1.11,
                "category": "apartment",
                "content": "",
                "floor": 2,
                "foreign_id": null,
                "id": 1,
                "images": Array [],
                "lat": 56.1,
                "lng": 24.9,
                "price": 100,
                "published_at": "2021-04-12T19:47:30.000Z",
                "rent_type": "monthly",
                "rooms": null,
                "type": "rent",
                "url": "https://www.ss.com/msg/lv/real-estate/flats/aizkraukle-and-reg/aiviekstes-pag/aghfx.html",
              },
              Object {
                "area": null,
                "calc_price_per_sqm": null,
                "category": "apartment",
                "content": "",
                "floor": null,
                "foreign_id": null,
                "id": 2,
                "images": Array [],
                "lat": 56.1,
                "lng": 24.9,
                "price": 200,
                "published_at": "2021-04-12T19:47:30.000Z",
                "rent_type": "monthly",
                "rooms": null,
                "type": "rent",
                "url": "https://www.ss.lv/msg/lv/real-estate/flats/riga/bolderaya/cceeb.html",
              },
            ],
            "summary": Object {
              "count": 2,
              "price": Object {
                "count": 2,
                "max": 200,
                "mean": 150,
                "median": 150,
                "min": 100,
                "mode": 100,
                "standardDev": 50,
              },
            },
          },
        },
        Object {
          "bounds": "56.992294 24.136619, 56.976394 23.99579, 56.992294 24.136619",
          "id": 2,
          "properties": Object {
            "results": Array [],
            "summary": Object {
              "count": 0,
              "price": Object {
                "count": 0,
                "max": null,
                "mean": null,
                "median": null,
                "min": null,
                "mode": null,
                "standardDev": null,
              },
            },
          },
        },
      ],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Resolver: bounds successfully retrieves bounds data 1`] = `
Object {
  "data": Object {
    "bounds": Object {
      "bounds": "56.992294 24.136619, 56.976394 23.99579, 56.992294 24.136619, 56.992294 24.136619",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Resolver: bounds successfully retrieves building and property information 1`] = `
Object {
  "data": Object {
    "bounds": Object {
      "buildings": Array [
        Object {
          "id": 1,
          "properties": Object {
            "results": Array [
              Object {
                "price": 100,
              },
              Object {
                "price": 200,
              },
            ],
          },
        },
        Object {
          "id": 2,
          "properties": Object {
            "results": Array [
              Object {
                "price": 300,
              },
            ],
          },
        },
        Object {
          "id": 3,
          "properties": Object {
            "results": Array [],
          },
        },
      ],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Resolver: bounds successfully retrieves land and property information 1`] = `
Object {
  "data": Object {
    "bounds": Object {
      "land": Array [
        Object {
          "id": 1,
          "properties": Object {
            "results": Array [
              Object {
                "price": 100,
              },
              Object {
                "price": 200,
              },
            ],
          },
          "vzd": Object {
            "land": Array [
              Object {
                "sale_id": 1,
              },
            ],
          },
        },
        Object {
          "id": 2,
          "properties": Object {
            "results": Array [],
          },
          "vzd": Object {
            "land": Array [
              Object {
                "sale_id": 1,
              },
              Object {
                "sale_id": 100,
              },
            ],
          },
        },
      ],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Resolver: bounds successfully returns nothing if there are no buildings in this bound 1`] = `
Object {
  "data": Object {
    "bounds": Object {
      "buildings": Array [],
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Resolver: bounds throws a validation exception if bounds filter has too large location 1`] = `
Object {
  "data": null,
  "errors": Array [
    Object {
      "extensions": Object {
        "code": "BAD_USER_INPUT",
        "details": Array [
          Object {
            "context": Object {
              "area": 0.0001,
              "key": "bounds",
              "label": "bounds",
              "value": "57.0510741522279 24.34369621296768, 56.86735048784755 24.34369621296768, 56.86735048784755 23.842917061051175, 57.0510741522279 23.842917061051175, 57.0510741522279 24.34369621296768",
            },
            "message": "\\"bounds\\" are must not exceed 0.0001",
            "path": Array [
              "bounds",
            ],
            "type": "string.maxArea",
          },
        ],
      },
      "message": "Input validation failed",
    },
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Resolver: bounds throws a validation exception if bounds filter has too large location, but allows for larger region if no property data requested 1`] = `
Object {
  "data": null,
  "errors": Array [
    Object {
      "extensions": Object {
        "code": "BAD_USER_INPUT",
        "details": Array [
          Object {
            "context": Object {
              "area": 0.001,
              "key": "bounds",
              "label": "bounds",
              "value": "57.0510741522279 24.34369621296768, 56.86735048784755 24.34369621296768, 56.86735048784755 23.842917061051175, 57.0510741522279 23.842917061051175, 57.0510741522279 24.34369621296768",
            },
            "message": "\\"bounds\\" are must not exceed 0.001",
            "path": Array [
              "bounds",
            ],
            "type": "string.maxArea",
          },
        ],
      },
      "message": "Input validation failed",
    },
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Resolver: bounds throws a validation exception if no bounds filter provided 1`] = `
Object {
  "data": undefined,
  "errors": Array [
    Object {
      "extensions": Object {
        "code": "GRAPHQL_VALIDATION_FAILED",
      },
      "message": "Field \\"bounds\\" argument \\"bounds\\" of type \\"String!\\" is required, but it was not provided.",
    },
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
